# Hand_mouseOS

./: .gitattributes  Makefile  README.md  TODO.md  Taskfile.yml  benchmark_resolution.py  flake.nix  handmouse-engine.spec  main.py  master_run.sh  package-lock.json  requirements.txt  setup_uinput.sh  test_mp_gpu.py
.github/workflows/: ci.yml
amelioration/: HandMouseOS_Plan_Optimisation_Complet.docx  IMPROVEMENT_PLAN.md  README.md  hand_mouse_optimized_implementations.py  install_hand_mouse_os.sh
assets/3d/: hand_scene.html
assets/shaders/: brightness_contrast.glsl  denoiser.glsl  edge_detection.glsl  gaussian_blur.glsl
bench/: bench.cpp  bench.go  bench.h  full_bench.py  libgo_bench.h  numba_numpy_bench.py  simd_bench.py
cli/: go.mod  go.sum  main.go
cli/cmd/: config.go  dash.go  root.go  run.go  setup.go  (+5 more)
native/: cpu_utils.c  cpu_utils.h  hand_utils.c  hand_utils.h  memory_monitor.c  memory_monitor.h
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/filters/: mod.rs  simd_filter.rs
rust_core/src/geometry/: mod.rs
scripts/: build_portable.sh
src/: action_dispatcher.py  advanced_filter.py  asl_manager.py  calibration_view.py  context_mode.py  engine.py  engine_headless.py  feedback_overlay.py  gesture_classifier.py  gestures_view.py  gui.py  headless_runner.py  ipc_server.py  main.py  mouse_driver.py  one_euro_filter.py  optimized_utils.py  settings_view.py  sign_recognizer.py  skeleton_assets.py  test_cam.py  virtual_keyboard.py
src-rust/: Cargo.toml
tests/: conftest.py  test_core.py  test_engine.py  test_geometry.py  test_ipc.py
(+24 files in other folders)
