[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
description = "Extensions Rust haute performance pour Hand Mouse OS"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Enable SIMD auto-vectorization for the target CPU
# rustflags are set via RUSTFLAGS env var: -C target-cpu=native

